.provarCaches/00D410000011HE0EAM/objects/rstkf__apinvlineforex__c.object
<CustomObject>
    <description>apinvlineforex__c</description>
    <fields>
        <fullName>rstkf__apinvlineforex_apinvline__c</fullName>
        <label>Payable Session Line</label>
        <referenceTo>rstkf__apinvline__c</referenceTo>
        <relationshipLabel>Foreign Exchange Gain/Loss on Receipts</relationshipLabel>
        <relationshipName>apinvlineforexs</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvlineforex_exchratevaramt__c</fullName>
        <label>Exchange Rate Variance Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvlineforex_rcptexchrate__c</fullName>
        <label>Home to Maintenance  Curr  Rcpt ExRate</label>
        <precision>17</precision>
        <scale>6</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__apinvlineforex_seq__c</fullName>
        <label>Sequence</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>rstkf__externalid__c</fullName>
        <externalId>true</externalId>
        <label>External Id</label>
        <length>100</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>rstkf__formula_extid__c</fullName>
        <formula>rstkf__apinvlineforex_apinvline__r.rstkf__externalid__c &amp; &apos;_&apos; &amp; TEXT( rstkf__apinvlineforex_seq__c )</formula>
        <label>Formula External Id</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__formula_name__c</fullName>
        <formula>rstkf__apinvlineforex_apinvline__r.Name +&apos;(&apos; +  TEXT( rstkf__apinvlineforex_seq__c ) + &apos;)&apos;</formula>
        <label>Formula Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__searchindex__c</fullName>
        <label>Search Index</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>rstkf__triggeroptions__c</fullName>
        <label>triggeroptions</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>Foreign Exchange Gain/Loss on Receipt</label>
    <listViews>
        <fullName>rstkf__RS_Foreign_Exchange_Gain_Loss_on_Receipts</fullName>
        <columns>NAME</columns>
        <columns>rstkf__apinvlineforex_apinvline__c</columns>
        <columns>rstkf__apinvlineforex_seq__c</columns>
        <columns>rstkf__apinvlineforex_rcptexchrate__c</columns>
        <columns>rstkf__apinvlineforex_exchratevaramt__c</columns>
        <columns>CREATEDBY_USER</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <label>Foreign Exchange Gain/Loss on Receipts</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Foreign Exchange Gain/Loss on Receipts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>